# H264Parser

./: .gitignore  CMakeLists.txt  README.md
read_H264/: AnnexBReader.cpp  AnnexBReader.h  CMakeLists.txt  Nalu.cpp  Nalu.h  main.cpp
read_h264/: AnnexBReader.cpp  AnnexBReader.h  CMakeLists.txt  EBSP.cpp  EBSP.h  Nalu.cpp  Nalu.h  RBSP.cpp  RBSP.h  main.cpp
